# edjfunction-example-rust

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  serverless_function.rs
