[package]
name = "edjfunction-example-rust"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
edjlib = { path = "../../../rust-client-edjLibrary-stubs"}